--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/m-plus-rounded-1c": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.42.4",
+    "aes-js": "^3.1.2",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
+    "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -29,14 +33,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/aes-js": "^3.1.4",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
