--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -17,6 +17,7 @@
     "@expo-google-fonts/m-plus-rounded-1c": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.42.4",
     "aes-js": "^3.1.2",
@@ -41,7 +42,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
