--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@supabase/supabase-js": "^2.42.4",
     "aes-js": "^3.1.2",
     "expo": "~50.0.14",
+    "expo-dev-client": "~3.3.11",
+    "expo-dev-launcher": "^3.6.9",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -42,8 +44,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.4.3",
-    "expo-dev-client": "~3.3.11"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
